Fix scrollbars

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -1518,6 +1518,7 @@ input:checked~.form__row--displayCondition {
 /********************************
  * Games in home view
  ********************************/
+
 .gameBadge__container {
 	display: -webkit-box;
 	display: -ms-flexbox;
@@ -1527,6 +1528,20 @@ input:checked~.form__row--displayCondition {
 	padding: var(--margin-xs);
 	margin: -15px;
 	height: 55vh;
+	overflow: hidden;
+}
+
+.gameBadge__container>div {
+	height: 110%;
+	margin-bottom: -50px;
+	/* maximum width of scrollbar */
+	padding-bottom: 50px;
+	/* maximum width of scrollbar */
+	margin-right: -50px;
+	/* maximum width of scrollbar */
+	padding-right: 50px;
+	/* maximum width of scrollbar */
+	overflow: scroll;
 }
 
 .gameBadge__noGame {
@@ -1573,6 +1588,7 @@ input:checked~.form__row--displayCondition {
 	box-shadow: var(--boxshadow-secondLight);
 	transition: var(--animation-hover);
 	text-decoration: none;
+	margin-left: 6px;
 }
 
 .gameBadge--phantom {
@@ -1646,7 +1662,6 @@ input:checked~.form__row--displayCondition {
 		min-height: 50px;
 	}
 }
-
 /********************************
  * Icons
  ********************************/
@@ -2193,7 +2208,7 @@ input:checked~.form__row--displayCondition {
 	margin: 0;
 	padding: 0;
 	max-height: 40vh;
-	overflow: scroll
+	overflow: hidden
 }
 .searchFriends li {
 		list-style: none
@@ -2220,6 +2235,16 @@ input:checked~.form__row--displayCondition {
 			transform: none;
 			background: var(--color-text-alpha);
 		}
+
+.searchFriends > div {
+	height: 100%;
+	margin-bottom: -50px; /* maximum width of scrollbar */
+	padding-bottom: 50px; /* maximum width of scrollbar */
+	margin-right: -50px; /* maximum width of scrollbar */
+	padding-right: 50px; /* maximum width of scrollbar */
+	overflow: scroll;
+}
+
 .searchFriends__container {
 	position: relative;
 }
